YTDB-510: Derive record version from transaction timestamp in SI implementation
Remove recordVersion parameter from createRecord() and updateRecord() methods
in StorageCollection interface. Record versions are now consistently derived
from atomicOperation.getOperationUnitId() (transaction timestamp) internally.

Code cleanup:
- Remove unused methods: getBinaryVersion(), compression(), getNextFreePosition(),
  getIndexValue(), getActiveTransactions(), restoreFromBackup(Path) overload
- Remove unused calculateContentSizeFromCollectionEntrySize() and local variables
- Hardcode backward-compatible values for index engine API version and TX mode flag

Modernize Java idioms:
- Use transaction.remove() instead of set(null) for ThreadLocal cleanup
- Use Thread.currentThread().threadId() instead of deprecated getId()
- Use Locale.of() instead of deprecated Locale constructor